// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error can override text 1`] = `
<div
  className="message-box-body"
  data-testid="error"
>
  <h3
    className="message-box-heading"
  >
    An important heading
  </h3>
  Body text
  <div
    className="message-box-event-id"
    data-testid="event-id"
  />
</div>
`;

exports[`Error matches snapshot 1`] = `
<div
  className="message-box-body"
  data-testid="error"
>
  <h3
    className="message-box-heading"
  >
    Uh-oh, there's been a glitch
  </h3>
  We're not quite sure what went wrong. Restart your browser. If this doesn't solve the problem, visit our 
  <a
    href="https://help.openstax.org"
    target="_blank"
  >
    Support Center
  </a>
  .
  <div
    className="message-box-event-id"
    data-testid="event-id"
  />
</div>
`;
